--- a/src/main/resources/views/TaskList.fxml
+++ b/src/main/resources/views/TaskList.fxml
@@ -3,16 +3,25 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane prefHeight="422.0" prefWidth="489.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.TaskListController">
    <children>
-      <ListView fx:id="taskList" layoutX="14.0" layoutY="14.0" prefHeight="398.0" prefWidth="456.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="25.0" />
-      <Button fx:id="editorBtn" layoutX="20.0" layoutY="3.0" mnemonicParsing="false" prefHeight="13.0" prefWidth="47.0" text="Edit" AnchorPane.rightAnchor="421.8" AnchorPane.topAnchor="3.0">
-         <font>
-            <Font size="10.0" />
-         </font>
-      </Button>
+      <ListView fx:id="taskList" layoutX="14.0" layoutY="14.0" prefHeight="382.0" prefWidth="310.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="159.0" AnchorPane.topAnchor="20.0" />
+      <VBox alignment="CENTER" layoutX="330.0" layoutY="20.0" prefHeight="382.0" prefWidth="148.0" spacing="25.0" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="20.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#openMainPage" prefHeight="24.0" prefWidth="70.0" text="Main Page">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Button>
+            <Button layoutX="49.0" layoutY="189.0" mnemonicParsing="false" onAction="#completeTask" prefHeight="24.0" prefWidth="86.0" text="Complete Task">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
