--- a/src/main/resources/views/EditorView.fxml
+++ b/src/main/resources/views/EditorView.fxml
@@ -12,7 +12,7 @@
          <children>
             <Button mnemonicParsing="false" onAction="#savePressed" text="Save" />
             <Button mnemonicParsing="false" onAction="#buildPressed" text="Build" />
-            <Button mnemonicParsing="false" text="Help" />
+            <Button mnemonicParsing="false" onAction="#helpPressed" text="Help" />
             <Button layoutX="104.0" layoutY="10.0" mnemonicParsing="false" onAction="#openMainScreen" text="Main Screen" />
          </children>
       </HBox>
